[gd_scene load_steps=73 format=2]

[ext_resource path="res://GameContent/GameObjects/Enemy/EnemtyAI.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameContent/GameObjects/Enemy/WanderAI.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameContent/QuickScenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameContent/GameObjects/Skeleton.gd" type="Script" id=4]
[ext_resource path="res://Monster/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=5]
[ext_resource path="res://Monster/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=6]
[ext_resource path="res://Monster/Skeleton/Sprite Sheets/Skeleton Attack.png" type="Texture" id=7]
[ext_resource path="res://GameContent/QuickScenes/Hitbox.gd" type="Script" id=8]
[ext_resource path="res://UI/HealthBar/EnemyHealthBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/HealthBar/EnemyHealthBar.gd" type="Script" id=10]
[ext_resource path="res://Monster/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 11 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 11 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 11 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 11 )
region = Rect2( 132, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 11 )
region = Rect2( 165, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 11 )
region = Rect2( 198, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 11 )
region = Rect2( 231, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 11 )
region = Rect2( 264, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 11 )
region = Rect2( 297, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 11 )
region = Rect2( 330, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 11 )
region = Rect2( 363, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 11 )
region = Rect2( 396, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 11 )
region = Rect2( 429, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 11 )
region = Rect2( 462, 0, 33, 32 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "Attack",
"speed": 15.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=58]
radius = 7.13521
height = 9.55631

[sub_resource type="CapsuleShape2D" id=59]
radius = 5.47847
height = 0.0

[sub_resource type="CapsuleShape2D" id=60]
radius = 17.1454
height = 0.0

[sub_resource type="CapsuleShape2D" id=61]
radius = 16.3176
height = 17.0752

[node name="Skeleton" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( -2, -8 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.78178, 0.222725 )
frames = SubResource( 57 )
animation = "Dead"
frame = 13
playing = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 58 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 59 )

[node name="Detection" parent="." instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 1

[node name="Shape" parent="Detection" index="0"]
modulate = Color( 1, 1, 1, 0.239216 )
position = Vector2( 0.44545, -0.222725 )

[node name="WanderAI" parent="." instance=ExtResource( 2 )]
position = Vector2( 2.22723, -0.222725 )

[node name="Timer" parent="WanderAI" index="0"]
autostart = false

[node name="AttackRange" type="Area2D" parent="."]
collision_mask = 2147483649

[node name="Range" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 0.668182, 1.33635 )
rotation = 1.5708
shape = SubResource( 60 )

[node name="SkeletonHitBox" parent="." instance=ExtResource( 3 )]
collision_layer = 5
collision_mask = 5
script = ExtResource( 8 )

[node name="CollisionShape2D" parent="SkeletonHitBox" index="0"]
position = Vector2( 11.5546, 1.5 )
rotation = 3.14159
shape = SubResource( 61 )
disabled = true

[node name="UI" parent="." instance=ExtResource( 9 )]
margin_left = -14.622
margin_top = -17.447
margin_right = -14.622
margin_bottom = -17.447
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 10 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
[connection signal="area_entered" from="SkeletonHitBox" to="." method="_on_DemonHitBox_area_entered"]

[editable path="Hitbox"]

[editable path="Detection"]

[editable path="WanderAI"]

[editable path="SkeletonHitBox"]

[editable path="UI"]
